--- a/MainGUI.form
+++ b/MainGUI.form
@@ -255,27 +255,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="456e9" class="javax.swing.JLabel" binding="labelImg">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="22" height="0"/>
-              </grid>
-            </constraints>
-            <properties>
-              <icon value="img/blank.png"/>
-              <text value=""/>
-              <visible value="false"/>
-            </properties>
-          </component>
-          <component id="3fb5c" class="javax.swing.JLabel" binding="stateLabel">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <font name="Montserrat Medium" size="20"/>
-              <text value="Benvenuto, crea una nuova partita per iniziare"/>
-            </properties>
-          </component>
           <component id="ff9c1" class="javax.swing.JSlider" binding="volumeSlider">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
@@ -303,6 +282,41 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <grid id="99b26" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="500" height="-1"/>
+                <preferred-size width="500" height="-1"/>
+                <maximum-size width="500" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="456e9" class="javax.swing.JLabel" binding="labelImg">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="22" height="0"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <icon value="img/blank.png"/>
+                  <text value=""/>
+                  <visible value="false"/>
+                </properties>
+              </component>
+              <component id="3fb5c" class="javax.swing.JLabel" binding="stateLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Montserrat Medium" size="20"/>
+                  <text value="Benvenuto, crea una nuova partita per iniziare"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
