--- a/src/MainGUI.form
+++ b/src/MainGUI.form
@@ -184,7 +184,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="721da" class="javax.swing.JButton" binding="avviaButton" default-binding="true">
+              <component id="721da" class="javax.swing.JButton" binding="startButton" default-binding="true">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
